// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverflowSet snapshot tests basicSnapshot 1`] = `
<div
  aria-orientation="horizontal"
  className=
      ms-FocusZone
      ms-OverflowSet
      &:focus {
        outline: none;
      }
      {
        display: flex;
        flex-wrap: nowrap;
        position: relative;
      }
  data-focuszone-id="FocusZone0"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDownCapture={[Function]}
  role="menubar"
/>
`;

exports[`OverflowSet snapshot tests snapshot with classname 1`] = `
<div
  aria-orientation="horizontal"
  className=
      ms-FocusZone
      ms-OverflowSet
      foobar
      &:focus {
        outline: none;
      }
      {
        display: flex;
        flex-wrap: nowrap;
        position: relative;
      }
  data-focuszone-id="FocusZone1"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDownCapture={[Function]}
  role="menubar"
/>
`;

exports[`OverflowSet snapshot tests snapshot with classname and vertical layout 1`] = `
<div
  aria-orientation="vertical"
  className=
      ms-FocusZone
      ms-OverflowSet
      foobar
      &:focus {
        outline: none;
      }
      {
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        position: relative;
      }
  data-focuszone-id="FocusZone2"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDownCapture={[Function]}
  role="menubar"
/>
`;
